# ai-assistant-tauri

./: .gitignore  CHANGELOG.md  CLAUDE.md  PROJECT.md  README.md  package-lock.json  package.json  vitest.config.ts
agent-runtime/: jest.config.js  package-lock.json  package.json
agent-runtime/src/: index.ts
agent-runtime/src/agent/: core.ts
agent-runtime/src/mcp/: browser.ts  client.ts  index.ts  mcp.test.ts  stdio.ts  types.ts
agent-runtime/src/memory/: compressor.ts  index.ts  learner.ts  manager.test.ts  manager.ts  types.ts
agent-runtime/src/providers/: anthropic.ts  base.test.ts  base.ts  classifier.ts  ollama.ts  openai.ts  router.ts  (+1 more)
docs/: v0.5-detailed-plan.md  v0.5-release-notes.md
src/: App.css  App.test.tsx  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/binaries/: agent-runtime
src-tauri/src/: lib.rs  main.rs  sidecar.rs
src-tauri/src/agent/: commands.rs  context.rs  mod.rs  multimodal.rs  orchestrator.rs
src-tauri/src/collaboration/: export_mod.rs  marketplace.rs  mod.rs  template_commands.rs  template_io.rs  templates.rs
src-tauri/src/db/: mod.rs  schema.rs
src-tauri/src/integration/: cloud.rs  database.rs  git.rs  mod.rs
src-tauri/src/integration/cloud/: mod.rs  s3.rs
src-tauri/src/integration/database/: mod.rs  pool.rs
src-tauri/src/integration/git/: mod.rs  operations.rs
src-tauri/src/marketplace/: install.rs  listing.rs  mod.rs  store.rs  tests.rs
src-tauri/src/plugins/: api.rs  executor.rs  loader.rs  mod.rs  monitor.rs  runtime.rs  sandbox.rs  wasi_host.rs
src-tauri/src/scheduler/: cron.rs  mod.rs  runner.rs  scheduler.rs
src-tauri/src/security/: credentials.rs  encryption.rs  migration.rs  mod.rs
src-tauri/src/sync/: commands.rs  conflict.rs  manager.rs  mod.rs  offline.rs
src-tauri/src/voice/: commands.rs  mod.rs  stt.rs  tts.rs
src-tauri/src/workflow/: commands.rs  engine.rs  mod.rs  nodes.rs  store.rs  triggers.rs
src-tauri/tests/: agent_integration_test.rs  plugins_test.rs  sync_integration_test.rs  voice_stt.rs  workflow_integration_test.rs
src/hooks/: useAgent.ts  useFiles.ts
src/lib/: cn.ts  utils.ts
src/services/: tauri.ts  types.ts
src/stores/: agentStore.ts  browserStore.ts  chatStore.ts  collaborationStore.ts  integrationsStore.ts  memoryStore.ts  permissionStore.ts  pluginStore.ts  recipeStore.ts  routerStore.ts  schedulerStore.ts  settingsStore.ts  skillStore.ts  subAgentStore.ts  syncStore.ts  themeStore.ts  voiceStore.ts  workflowStore.ts
src/types/: agent.ts  chat.ts  collaboration.ts  integration.ts  memory.ts  permission.ts  plugin.ts  provider.ts  recipe.ts  scheduler.ts  skill.ts  subagent.ts  sync.ts  voice.ts  workflow.ts
(+37 files in other folders)
