[package]
name = "ai-assistant-tauri"
version = "0.1.0"
description = "AI Personal Assistant built with Tauri"
authors = ["jeongsk"]
edition = "2021"

[lib]
name = "ai_assistant_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
dirs = "5"

# v0.5 Security dependencies
thiserror = "1.0"
keyring = { version = "3", features = ["apple-native", "windows-native", "linux-native"] }
aes-gcm = "0.10"
sha2 = "0.10"

# v0.5 Database dependencies
tokio-postgres = { version = "0.7", optional = true }
mysql_async = { version = "0.34", optional = true }

# v0.5 Git dependencies
git2 = { version = "0.19", optional = true }
walkdir = { version = "2", optional = true }

# v0.5 Cloud dependencies (optional - feature-gated)
aws-config = { version = "1", optional = true }
aws-sdk-s3 = { version = "1", optional = true }

# v0.5 Voice dependencies
whisper-rs = { version = "0.11", optional = true }

# v0.5 Plugin WASM Runtime dependencies
wasmtime = { version = "22", optional = true, features = ["runtime", "cranelift"] }
wasmtime-wasi = { version = "22", optional = true }

[features]
default = ["voice"]
database = ["tokio-postgres", "mysql_async"]
git = ["git2", "walkdir"]
cloud = ["aws-config", "aws-sdk-s3"]
voice = ["whisper-rs"]
wasm = ["wasmtime", "wasmtime-wasi"]
all-v05 = ["database", "git", "cloud", "voice", "wasm"]

[dev-dependencies]
tempfile = "3"
